--- a/package.json
+++ b/package.json
@@ -10,21 +10,30 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/native-stack": "^7.1.1",
     "eas-cli": "^13.4.1",
-    "expo": "~52.0.10",
-    "expo-app-loading": "^2.1.1",
+    "expo": "~52.0.11",
     "expo-font": "^13.0.1",
+    "expo-splash-screen": "^0.29.13",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native": "0.76.3",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
